# candycrush

./: CMakeLists.txt  CMakeLists.txt.in  main.cpp
CppApplication_1/: main.cpp
cmake/: External_SDL2.cmake  External_tamagotchi.cmake  FindSDL2.cmake
src/: CMakeLists.txt  director.cpp  director.h  game.cpp  game.h  main.cpp  sdlwrapper.cpp  sdlwrapper.h
src/util/: time.cpp  time.h
tamagotchi/: CMakeLists.txt  game.cpp  game.h  sdlwrapper.h
tamagotchi/cmake/: FindSDL2.cmake
